--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "duo-autoprefixer",
   "version": "0.1.1",
   "description": "autoprefixer plugin for duo",
-  "repository": "shinnn/duo-autoprefixer",
+  "repository": "duojs/autoprefixer",
   "author": {
     "name": "Shinnosuke Watanabe",
     "url": "https://github.com/shinnn"
@@ -14,7 +14,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/shinnn/duo-autoprefixer/blob/master/LICENSE"
+      "url": "https://github.com/duojs/autoprefixer/blob/master/LICENSE"
     }
   ],
   "files": [
