--- a/package.json
+++ b/package.json
@@ -35,15 +35,18 @@
     "postprocess"
   ],
   "dependencies": {
-    "autoprefixer-core": "^3.0.0"
+    "autoprefixer-core": "^4.0.0",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {
     "duo": "^0.8.1",
-    "eslint": "^0.8.2",
-    "jscs": "^1.5.9",
+    "eslint": "^0.9.2",
+    "istanbul": "^0.3.2",
+    "istanbul-coveralls": "^1.0.1",
+    "jscs": "^1.7.3",
     "require-main": "^0.1.1",
     "rimraf": "^2.2.8",
     "tap-spec": "^1.0.1",
-    "tape": "^3.0.1"
+    "tape": "^3.0.3"
   }
 }
