report code coverage to coveralls.io
https://coveralls.io/r/duojs/autoprefixer

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "pretest": "eslint *.js & jscs *.js",
-    "test": "tape test/test.js | tap-spec"
+    "test": "tape test/test.js | tap-spec",
+    "coverage": "istanbul cover test/test.js",
+    "coveralls": "${npm_package_scripts_coverage} && istanbul-coveralls"
   },
   "licenses": [
     {
