--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "pretest": "eslint *.js & jscs *.js",
     "test": "tape test/test.js | tap-spec",
-    "coverage": "istanbul cover test/test.js",
+    "coverage": "istanbul cover --no-default-excludes -x=node_modules/** test/test.js",
     "coveralls": "${npm_package_scripts_coverage} && istanbul-coveralls"
   },
   "licenses": [
@@ -37,18 +37,18 @@
     "postprocess"
   ],
   "dependencies": {
-    "autoprefixer-core": "^4.0.0",
+    "autoprefixer-core": "^5.0.0",
+    "tryit": "^1.0.1",
     "xtend": "^4.0.0"
   },
   "devDependencies": {
-    "duo": "^0.8.1",
-    "eslint": "^0.9.2",
-    "istanbul": "^0.3.2",
+    "duo": "^0.9.1",
+    "eslint": "^0.11.0",
+    "istanbul": "^0.3.5",
     "istanbul-coveralls": "^1.0.1",
-    "jscs": "^1.7.3",
-    "require-main": "^0.1.1",
+    "jscs": "^1.9.0",
     "rimraf": "^2.2.8",
-    "tap-spec": "^1.0.1",
+    "tap-spec": "^2.1.2",
     "tape": "^3.0.3"
   },
   "jscsConfig": {
